# segmentree

./: .gitignore  Cargo.toml  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
pysegtree/: __init__.py
src/: core.rs  lib.rs  py.rs  util.rs
tests/: test_basic.py
