[project]
name = "pysegtree"
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
authors = [{name="Matvii Bunin", email="buninmatthew@gmail.com"}]

[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[tool.maturin]
packages = ["pysegtree"]        
module-name = "pysegtree.segtree_native" 
features = ["python"]
strip = true
